test: add pytest with tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ requires-python = ">=3.9"
 
 [project.optional-dependencies]
 dev = [
+    "httpx==0.28.1",
+    "pytest==8.4.2",
     "ruff==0.13.0",
 ]
 
@@ -32,3 +34,6 @@ ignore = [
     "ANN003",  # annotations for **kwargs
     "ANN204",  # return annotations for magic methods
 ]
+
+[tool.pytest.ini_options]
+addopts = "--verbose"
