--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ requires-python = ">=3.9"
 [project.optional-dependencies]
 dev = [
     "httpx==0.28.1",
+    "mkdocs==1.6.1",
+    "mkdocs-material==9.6.20",
+    "mkdocs-gen-files==0.5.0",
+    "mkdocs-literate-nav==0.6.2",
+    "mkdocstrings[python]==0.30.1",
     "pytest==8.4.2",
     "ruff==0.13.0",
 ]
